--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 10:04:39 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Jul 06 23:26:00 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -779,6 +779,8 @@ label.consented  =Consented?
 label.consented.on  =Consented on
 label.policy.details  =Policy details
 authoring.fla.page.prop.gradebook.none  =No score
+label.select.country  =Select a country
+error.country.required  =Country is required
 
 
 #====== Templates	
@@ -835,5 +837,4 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
-
-#======= End labels: Exported 773 labels for en AU =====
+#======= End labels: Exported 775 labels for en AU =====
