--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 10:04:38 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Jul 06 23:25:56 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -779,6 +779,8 @@ label.consented  =\u00bfConsentido?
 label.consented.on  =Consentido en
 label.policy.details  =Detalles de la pol\u00edtica
 authoring.fla.page.prop.gradebook.none  =Sin puntuaci\u00f3n
+label.select.country  =Seleccione un pa\u00eds
+error.country.required  =Se require pa\u00eds
 
 
-#======= End labels: Exported 773 labels for es ES =====
+#======= End labels: Exported 775 labels for es ES =====
