LDEV-4615 Add create date on user page in admin

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -88,6 +88,7 @@ admin.user.manage  =Manage users
 admin.user.delete  =Delete
 admin.user.add  =Add/Remove users
 admin.user.create  =Create user
+admin.user.create.date =Created
 admin.user.assign.roles  =Assign roles
 admin.user.find  =Find users
 admin.user.edit  =Edit user details
