--- a/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_en_AU.properties
@@ -246,5 +246,6 @@ label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
 
+label.marks.released  =Marks have been released
 
 #======= End labels: Exported 239 labels for en AU =====
