LDEV-4625 Make server country configurable
Also use default country in integrations

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -252,6 +252,7 @@ config.monitor.client.version  =Monitoring client version
 config.learner.client.version  =Learner client version
 config.server.version.number  =Server version number
 config.server.language  =Locale
+config.server.country =Country
 config.server.page.direction  =Locale page direction
 config.dictionary.date.created  =Language pack install date
 config.help.url  =Help URL
