LDEV-4617 Add an option to enable email verification on sign up

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -421,6 +421,8 @@ admin.signup.title  =Signup pages
 admin.group  =Course
 admin.lessons  =Add to lessons?
 admin.staff  =Add as staff/monitor?
+admin.email.verify =Require email verification?
+admin.email.verify.desc =(a verification email will be send before user can log in for the first time)
 admin.course.key  =Course Key
 admin.confirm.course.key  =Confirm course key
 admin.description.txt  =Description
