LDEV-4617 Implement full email verification on sign up

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -265,6 +265,9 @@ signup.email  =Email
 signup.confirm.email  =Confirm email
 signup.course.key  =Course key
 signup.submit  =Submit
+signup.email.verify.sent =A confirmation email has been sent to {0}<br />Check your email and follow the instructions.
+signup.email.verify.success =You email has been verified
+signup.email.verify.fail =Your email could not be verified
 title.lams.signup  =LAMS Signup
 error.username.blank  =Username cannot be blank
 error.username.exists  =Username is taken
