LDEV-4617 Do not put HTML tags into i18n labels

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -266,20 +266,19 @@ signup.confirm.email  =Confirm email
 signup.course.key  =Course key
 signup.submit  =Submit
 signup.email.verify.subject =LAMS: confirm email address
-signup.email.verify.body =Hi there,<br/><br/>\
-Please confirm your email address by clicking on the link below<br/>\
-<a href="{0}">{0}</a><br /><br />\
-Regards,<br />\
-LAMS Signup System
+signup.email.verify.body.1 =Hi there,
+signup.email.verify.body.2 =Please confirm your email address by clicking on the link below
+signup.email.verify.body.3 =Regards,
+signup.email.verify.body.4 =LAMS Signup System
 signup.email.verify.sent =A confirmation email has been sent to {0}<br />Check your email and follow the instructions.
 signup.email.verify.success =You email has been verified
 signup.email.verify.fail =Your email could not be verified
 signup.email.welcome.subject =LAMS: account details
-signup.email.welcome.body =Hi there,<br/><br/>\
-You've successfully registered an account with username {0} on the LAMS server at {1}.<br />\
-If you ever forget your password, you can reset it via this URL<br\>{1}/forgotPassword.jsp<br/><br/>\
-Regards<br/>\
-LAMS Signup System
+signup.email.welcome.body.1 =Hi there,
+signup.email.welcome.body.2 =You've successfully registered an account with username {0} on the LAMS server at {1}.
+signup.email.welcome.body.3 =If you ever forget your password, you can reset it via this URL
+signup.email.welcome.body.4 =Regards,
+signup.email.welcome.body.5 =LAMS Signup System
 title.lams.signup  =LAMS Signup
 error.username.blank  =Username cannot be blank
 error.username.exists  =Username is taken
