LDEV-4636 Initial implementation of read-only LDs feature

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -490,6 +490,8 @@ authoring.fla.rename.button  =Rename
 authoring.fla.open.button  =Open
 authoring.fla.save.button  =Save
 authoring.fla.import.button  =Import
+authoring.fla.readonly.checkbox =read-only
+authoring.fla.readonly.forbidden =This sequence is read-only. If you want to modify it, you can create its copy.
 authoring.fla.folder  =folder
 authoring.fla.sequence  =sequence
 authoring.fla.sequence.not.valid  =The sequence is not valid.<br />It needs to be corrected before it can be used in lessons.
