LDEV-4640, LDEV-4454 Put back a label removed probably by mistake

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -182,6 +182,7 @@ message.kumalive.poll.release.voters.confirm  =Are you sure you want to show pol
 label.kumalive.poll.missing.voters  =Not voted
 label.kumalive.poll.results  =Results
 label.kumalive.poll.votes.total  =Total votes
+button.kumalive.poll.chart.switch =Switch chart
 audit.activity.started  =Learner {0} ({1}) started activity {2} ({3})
 audit.activity.stopped  =Learner {0} ({1}) stopped activity {2} ({3})
 audit.learner.lesson.complete  =Learner {0} ({1}) completed lesson {2} ({3})
