LDEV-4640: change date label

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -150,7 +150,7 @@ label.kumalive.report.last.name  =Last name
 label.kumalive.report.login  =Login
 label.kumalive.report.attempt  =Attempt
 label.kumalive.report.average  =Average
-label.kumalive.report.time  =Time
+label.kumalive.report.time  =Date and time
 message.kumalive.report.load.error  =Error while loading data for report
 button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Export all
