LDEV-4641 Allow STARTTLS and SSL when sending emails with SMTP

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -325,6 +325,8 @@ config.ldap.bind.user.password  =Bind user password
 admin.user.authentication.method  =Authentication method
 config.smtp.user  =SMTP user
 config.smtp.password  =SMTP password
+config.smtp.port =SMTP port
+config.smtp.auth.security =SMTP security
 config.header.red5  =Media server
 config.red5.server.url  =Media server URL
 config.red5.recordings.url  =Media server recordings URL
