LDEV-4625 LDEV-4641 LDEV-4617 Adding labels
Adding labels via i18n

--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 09:55:22 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:53:49 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -620,6 +620,12 @@ label.consented  =\u00bfConsentido?
 label.consented.on  =Consentido en
 label.user.consents  =Consentimiento de usuarios
 label.user.full.name  =Nombre
+admin.user.create.date  =Creado en
+admin.email.verify  =\u00bfRequerir verificaci\u00f3n de email?
+admin.email.verify.desc  =(se enviar\u00e1 un correo electr\u00f3nico de verificaci\u00f3n antes de que el usuario pueda iniciar sesi\u00f3n por primera vez)
+config.smtp.port  =Puerto de SMTP
+config.smtp.auth.security  =Seguridad de autenticaci\u00f3n SMTP
+config.server.country  =Pa\u00eds
 
 
-#======= End labels: Exported 614 labels for es ES =====
+#======= End labels: Exported 620 labels for es ES =====
