--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 09:55:39 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:53:50 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -88,7 +88,6 @@ admin.user.manage  =Manage users
 admin.user.delete  =Delete
 admin.user.add  =Add/Remove users
 admin.user.create  =Create user
-admin.user.create.date =Created
 admin.user.assign.roles  =Assign roles
 admin.user.find  =Find users
 admin.user.edit  =Edit user details
@@ -113,6 +112,7 @@ admin.organisation.entry  =Course/Subcourse entry
 admin.organisation.name  =Name
 admin.organisation.code  =Code
 admin.organisation.description  =Description
+admin.organisation.locale  =Locale
 admin.organisation.status  =Status
 admin.can.add.user  =Course Administrators can add new users
 admin.can.browse.user  =Course Administrators can browse all users in the system
@@ -252,7 +252,6 @@ config.monitor.client.version  =Monitoring client version
 config.learner.client.version  =Learner client version
 config.server.version.number  =Server version number
 config.server.language  =Locale
-config.server.country =Country
 config.server.page.direction  =Locale page direction
 config.dictionary.date.created  =Language pack install date
 config.help.url  =Help URL
@@ -325,8 +324,6 @@ config.ldap.bind.user.password  =Bind user password
 admin.user.authentication.method  =Authentication method
 config.smtp.user  =SMTP user
 config.smtp.password  =SMTP password
-config.smtp.port =SMTP port
-config.smtp.auth.security =SMTP security
 config.header.red5  =Media server
 config.red5.server.url  =Media server URL
 config.red5.recordings.url  =Media server recordings URL
@@ -423,8 +420,6 @@ admin.signup.title  =Signup pages
 admin.group  =Course
 admin.lessons  =Add to lessons?
 admin.staff  =Add as staff/monitor?
-admin.email.verify =Require email verification?
-admin.email.verify.desc =(a verification email will be send before user can log in for the first time)
 admin.course.key  =Course Key
 admin.confirm.course.key  =Confirm course key
 admin.description.txt  =Description
@@ -625,6 +620,12 @@ label.consented  =Consented?
 label.consented.on  =Consented on
 label.user.consents  =User consents
 label.user.full.name  =Full name
+admin.user.create.date  =Created on
+admin.email.verify  =Require email verification?
+admin.email.verify.desc  =(a verification email will be send before user can log in for the first time)
+config.smtp.port  =SMTP port
+config.smtp.auth.security  =SMTP authentication security
+config.server.country  =Country
 
 
-#======= End labels: Exported 614 labels for en AU =====
+#======= End labels: Exported 620 labels for en AU =====
