--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 09:30:22 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:43:56 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -590,6 +590,39 @@ config.kumalive.enable  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\
 audit.remarks  =\u03a0\u03b1\u03c1\u03b1\u03c4\u03b7\u03c1\u03ae\u03c3\u03b5\u03b9\u03c2
 config.allow.direct.access.for.integration.learners  =\u0395\u03c0\u03b9\u03c4\u03c1\u03ad\u03c8\u03c4\u03b5 \u03c4\u03b7\u03bd \u03ac\u03bc\u03b5\u03c3\u03b7 \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03c4\u03b7 \u03b2\u03b1\u03c3\u03b9\u03ba\u03ae \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 LAMS \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2.
 label.type.tool.mark.released  =\u0395\u03c4\u03b9\u03ba\u03ad\u03c4\u03b5\u03c2 \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03c9\u03bd \u03c0\u03bf\u03c5 \u03ad\u03c7\u03bf\u03c5\u03bd \u03ba\u03c5\u03ba\u03bb\u03bf\u03c6\u03bf\u03c1\u03ae\u03c3\u03b5\u03b9
+label.policy.minor.change.hint  =\u039f\u03b9 \u03b4\u03b5\u03c5\u03c4\u03b5\u03c1\u03b5\u03cd\u03bf\u03c5\u03c3\u03b5\u03c2 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c3\u03b7\u03bc\u03b1\u03af\u03bd\u03bf\u03c5\u03bd \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c3\u03c4\u03b7 \u03b4\u03b9\u03b1\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7 \u03c0\u03bf\u03c5 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b7\u03c1\u03b5\u03ac\u03b6\u03bf\u03c5\u03bd \u03c4\u03b7 \u03c3\u03b7\u03bc\u03b1\u03c3\u03af\u03b1 \u03c4\u03b7\u03c2 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2. \u0395\u03ac\u03bd \u03b1\u03c5\u03c4\u03ae \u03b7 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03b5\u03af, \u03c4\u03cc\u03c4\u03b5 \u03b8\u03b1 \u03b4\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03b7\u03b8\u03b5\u03af \u03bc\u03b9\u03b1 \u03bd\u03ad\u03b1 \u03ad\u03ba\u03b4\u03bf\u03c3\u03b7 \u03c4\u03b7\u03c2 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2 \u03ba\u03b1\u03b9 \u03bf\u03b9 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2 \u03b8\u03b1 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03c3\u03c5\u03bd\u03b1\u03b9\u03bd\u03ad\u03c3\u03bf\u03c5\u03bd \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03bd\u03ad\u03b1 \u03ad\u03ba\u03b4\u03bf\u03c3\u03b7 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2.
+label.select.country  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03b7 \u03c7\u03ce\u03c1\u03b1
+error.country.required  =\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b7 \u03c7\u03ce\u03c1\u03b1.
+admin.policies.title  =\u03a0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ad\u03c2 \u03ba\u03b1\u03b9 \u03c3\u03c5\u03b3\u03ba\u03b1\u03c4\u03b1\u03b8\u03ad\u03c3\u03b5\u03b9\u03c2
+admin.add.edit.policy  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 / \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03bd\u03ad\u03b1\u03c2 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2
+label.name  =\u039f\u03bd\u03bf\u03bc\u03b1
+label.policy.type  =\u03a4\u03cd\u03c0\u03bf\u03c2 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2
+label.policy.status  =\u039a\u03b1\u03c4\u03ac\u03c3\u03c4\u03b1\u03c3\u03b7 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2
+label.version  =\u0388\u03ba\u03b4\u03bf\u03c3\u03b7
+label.last.modified  =\u03a4\u03b5\u03bb\u03b5\u03c5\u03c4\u03b1\u03af\u03b1 \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7
+label.consents  =\u03a3\u03c5\u03bd\u03b1\u03b9\u03bd\u03ad\u03c3\u03b5\u03b9\u03c2
+label.add.new.policy  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03bd\u03ad\u03b1\u03c2 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae\u03c2
+label.policy.status.hint  =\u039c\u03b9\u03b1 \u03b5\u03bd\u03b5\u03c1\u03b3\u03ae \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae \u03b8\u03b1 \u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af \u03c4\u03b7 \u03c3\u03c5\u03b3\u03ba\u03b1\u03c4\u03ac\u03b8\u03b5\u03c3\u03b7 \u03b1\u03c0\u03cc \u03c4\u03bf\u03c5\u03c2 \u03bd\u03ad\u03bf\u03c5\u03c2 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2. \u039f\u03b9 \u03c5\u03c0\u03ac\u03c1\u03c7\u03bf\u03bd\u03c4\u03b5\u03c2 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2 \u03b8\u03b1 \u03c7\u03c1\u03b5\u03b9\u03b1\u03c3\u03c4\u03b5\u03af \u03bd\u03b1 \u03c3\u03c5\u03bc\u03c6\u03c9\u03bd\u03ae\u03c3\u03bf\u03c5\u03bd \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae\u03bd \u03c4\u03b7\u03bd \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b5\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03ae \u03c4\u03bf\u03c5\u03c2.
+label.policy.status.active  =\u0395\u03bd\u03b5\u03c1\u03b3\u03cc\u03c2
+label.policy.status.inactive  =\u0391\u03bd\u03b5\u03bd\u03b5\u03c1\u03b3\u03cc\u03c2
+label.policy.type.site  =\u03a0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae \u03b9\u03c3\u03c4\u03cc\u03c4\u03bf\u03c0\u03bf\u03c5
+label.policy.type.privacy  =\u03a0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae \u03b1\u03c0\u03bf\u03c1\u03c1\u03ae\u03c4\u03bf\u03c5
+label.policy.type.third.party  =\u03a0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae \u03c4\u03c1\u03af\u03c4\u03bf\u03c5 \u03bc\u03ad\u03c1\u03bf\u03c5\u03c2
+label.policy.type.other  =\u0386\u03bb\u03bb\u03b7 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae
+label.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7
+label.full.policy  =\u03a0\u03bb\u03ae\u03c1\u03b7\u03c2 \u03c0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ae
+label.view.previous.versions  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03c0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03c9\u03bd \u03b5\u03ba\u03b4\u03cc\u03c3\u03b5\u03c9\u03bd
+label.activate  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7
+label.deactivate  =\u0391\u03c0\u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7
+label.minor.change  =\u039c\u03b9\u03ba\u03c1\u03ae \u03b1\u03bb\u03bb\u03b1\u03b3\u03ae
+label.policy.consents  =\u03a0\u03bf\u03bb\u03b9\u03c4\u03b9\u03ba\u03ad\u03c2 \u03c3\u03c5\u03bd\u03b1\u03b9\u03bd\u03ad\u03c3\u03b5\u03b9\u03c2
+label.consented  =\u03a3\u03c5\u03bc\u03c6\u03c9\u03bd\u03b7\u03c3\u03b1\u03c4\u03b5;
+label.consented.on  =\u03a3\u03c5\u03bd\u03b1\u03b9\u03bd\u03ad\u03c3\u03b1\u03c4\u03b5 \u03c3\u03c4\u03b1
+label.user.consents  =\u039f \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7\u03c2 \u03c3\u03c5\u03bd\u03b1\u03b9\u03bd\u03b5\u03af
+label.user.full.name  =\u03a0\u03bb\u03ae\u03c1\u03b5\u03c2 \u03cc\u03bd\u03bf\u03bc\u03b1
+admin.user.create.date  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03ae\u03b8\u03b7\u03ba\u03b5 \u03b1\u03c0\u03cc
+admin.email.verify  =\u039d\u03b1 \u03b1\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b5\u03c0\u03b1\u03bb\u03ae\u03b8\u03b5\u03c5\u03c3\u03b7 \u03b7\u03bb\u03b5\u03ba\u03c4\u03c1\u03bf\u03bd\u03b9\u03ba\u03bf\u03cd \u03c4\u03b1\u03c7\u03c5\u03b4\u03c1\u03bf\u03bc\u03b5\u03af\u03bf\u03c5;
+admin.email.verify.desc  =(\u03ad\u03bd\u03b1 email \u03b5\u03c0\u03b1\u03bb\u03ae\u03b8\u03b5\u03c5\u03c3\u03b7\u03c2 \u03b8\u03b1 \u03c3\u03c4\u03b1\u03bb\u03b5\u03af \u03c0\u03c1\u03b9\u03bd \u03bf \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7\u03c2 \u03bc\u03c0\u03bf\u03c1\u03ad\u03c3\u03b5\u03b9 \u03bd\u03b1 \u03c3\u03c5\u03bd\u03b4\u03b5\u03b8\u03b5\u03af \u03b3\u03b9\u03b1 \u03c0\u03c1\u03ce\u03c4\u03b7 \u03c6\u03bf\u03c1\u03ac)
 
 
-#======= End labels: Exported 584 labels for el GR =====
+#======= End labels: Exported 617 labels for el GR =====
