--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 09:55:39 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:53:50 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -620,6 +620,12 @@ label.consented  =Consented?
 label.consented.on  =Consented on
 label.user.consents  =User consents
 label.user.full.name  =Full name
+admin.user.create.date  =Created on
+admin.email.verify  =Require email verification?
+admin.email.verify.desc  =(a verification email will be send before user can log in for the first time)
+config.smtp.port  =SMTP port
+config.smtp.auth.security  =SMTP authentication security
+config.server.country  =Country
 
 
-#======= End labels: Exported 614 labels for en AU =====
+#======= End labels: Exported 620 labels for en AU =====
