LDEV-4644 Add outcomes in More Options on index page

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -844,6 +844,8 @@ authoring.error.application.exercise.must.have.100.percent=Application Exercise 
 authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.	
 authoring.label.grade=Grade	
 authoring.label.none=None	
+index.outcomes.manage =Outcomes
+index.outcomes.manage.tooltip =Manage learning outcomes and scales
 	
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
