LDEV-4644 Add/edit learning outcome

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -844,9 +844,31 @@ authoring.error.application.exercise.must.have.100.percent=Application Exercise 
 authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.	
 authoring.label.grade=Grade	
 authoring.label.none=None	
-index.outcomes.manage =Outcomes
-index.outcomes.manage.tooltip =Manage learning outcomes and scales
-	
+index.outcome.manage =Outcomes
+index.outcome.manage.tooltip =Manage learning outcomes and scales
+outcome.manage.title =Course outcomes
+outcome.manage.remove =Remove outcome
+outcome.manage.remove.confirm =Are you sure you want to remove this outcome?
+outcome.manage.add =Add outcome
+outcome.manage.edit =Edit outcome
+outcome.manage.view =View outcome
+outcome.manage.add.name =Name
+outcome.manage.add.code =Code
+outcome.manage.add.description =Description
+outcome.manage.add.global =Global
+outcome.manage.add.scale =Scale
+outcome.manage.add.scale.none =Choose a scale
+outcome.manage.add.scale.button =Manage scales
+outcome.manage.add.save =Save
+outcome.manage.scope =Scope
+outcome.manage.scope.global =global
+outcome.manage.scope.course =course
+outcome.manage.add.error =Error while saving an outcome
+outcome.manage.add.error.name.blank =Name can not be blank
+outcome.manage.add.error.code.blank =Code can not be blank
+outcome.manage.add.error.scale.choose =You have to choose a scale
+scale.manage.button =Manage scales
+
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
 authoring.tbl.template.description=Individual and Team Readiness Assessments followed by Application Exercises.	
