--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -626,6 +626,7 @@ admin.email.verify.desc  =(a verification email will be send before user can log
 config.smtp.port  =SMTP port
 config.smtp.auth.security  =SMTP authentication security
 config.server.country  =Country
+admin.outcome.title =Outcomes management
 
 
 #======= End labels: Exported 620 labels for en AU =====
