LDEV-4639: fixing string length
Fixing string length en Español

--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -704,7 +704,7 @@ authoring.fla.activity.gate.description  =puerta
 authoring.fla.activity.branching.description  =ramificaci\u00f3n
 tour.prev  =Anterior
 tour.next  =Siguiente
-tour.end.tour  =Final del Tutorial
+tour.end.tour  =Fin tutorial
 label.search.for.courses  =Buscar curso
 label.save.as.course.grouping  =Guardar como agrupaci\u00f3n del curso
 label.enter.course.grouping.name  =Ingrese el nombre para la nueva agrupaci\u00f3n del curso
