LDEV-4644 Add scale management

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -858,7 +858,6 @@ outcome.manage.add.description =Description
 outcome.manage.add.global =Global
 outcome.manage.add.scale =Scale
 outcome.manage.add.scale.none =Choose a scale
-outcome.manage.add.scale.button =Manage scales
 outcome.manage.add.save =Save
 outcome.manage.scope =Scope
 outcome.manage.scope.global =global
@@ -867,7 +866,18 @@ outcome.manage.add.error =Error while saving an outcome
 outcome.manage.add.error.name.blank =Name can not be blank
 outcome.manage.add.error.code.blank =Code can not be blank
 outcome.manage.add.error.scale.choose =You have to choose a scale
-scale.manage.button =Manage scales
+scale.title =Scales
+scale.manage =Manage scales
+scale.manage.add =Add scale
+scale.manage.edit =Edit scale
+scale.manage.view =View scale
+scale.manage.title =Course scales
+scale.manage.remove =Remove scale
+scale.manage.remove.confirm =Are you sure you want to remove this scale?
+scale.manage.add.value =Values
+scale.manage.add.value.info =Enter comma separated values in increasing order of value. For example, an A,B,C,D scale must be entered as D,C,B,A.
+scale.manage.add.value.error.blank =A value must not be blank
+scale.manage.add.error =Error while saving an outcome scale
 
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
