LDEV-4617 LDEV-4636: Adding lables
English and Español

--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Jul 06 23:25:56 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 07:46:48 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -228,10 +228,7 @@ error.edit.disabled  =Desactivar opci\u00f3n para editar el perfil de usuario.
 message.profile.partially.edited  =Los datos de perfil de usuario se pueden editar solo parcialmente por restricciones de edici\u00f3n.
 message.partial.edit.only  =Solamente email y tel\u00e9fonos pueden ser cambiados dado restricciones en edici\u00f3n de perfil de usuario.
 error.password.empty  =Se requiere nueva contrase\u00f1a.
-label.tutorial.enabled  =Abrir automaticamente asistentes de ayuda
 label.portrait.create.new.portrait  =Seleccione una imagen o use la c\u00e1mara de su ordenador para crear su foto.
-label.tutorial.disable.single  =Usted ha decidido no mostrar este video de nuevo. Siempre se puede jugar usando el icono de v\u00eddeo en la esquina superior derecha de la p\u00e1gina.
-label.tutorial.disable.all  =Bienvenido a LAMS! Como nuevo usuario, es posible que desee pasar unos minutos mirando este asistente con videos para ayudarle a sacar el m\u00e1ximo partido de LAMS. Si usted es un usuario experimentado, puede desactivar esta opci\u00f3n. Si usted es un nuevo usuario de LAMS, le recomendamos que deje esta opci\u00f3n para obtener ayuda contextual. \u00bfQuieres dejar esta opci\u00f3n activa?
 message.preceding.lessons.not.finished.cannot.participate  =Lecciones anteriores no se han terminado. Usted no puede participar en la lecci\u00f3n hasta que se haya finalizado las anteriores.
 index.conditions  =Condiciones
 index.conditions.tooltip  =Condiciones para participar en esta lecci\u00f3n
@@ -423,7 +420,7 @@ label.remove.org.favorite  =Eliminar curso de favoritos
 label.mark.org.favorite  =Agregar a favoritos
 label.email.send.me.a.copy  =Enviarme una copia
 label.password.max.length  =debe ser de menos de 24 caracteres
-label.password.min.length  =debe tener por lo menos {0} caracteres
+label.password.min.length  =por lo menos {0} caracteres
 label.password.old.must.entered  =Se debe ingresar la contrase\u00f1a anterior
 label.password.symbols.allowed  =Solo estos s\u00edmbolos est\u00e1n permitidos
 label.password.restrictions  =La contrase\u00f1a debe seguir las restricciones que se muestran arriba
@@ -704,7 +701,7 @@ authoring.fla.activity.gate.description  =puerta
 authoring.fla.activity.branching.description  =ramificaci\u00f3n
 tour.prev  =Anterior
 tour.next  =Siguiente
-tour.end.tour  =Fin tutorial
+tour.end.tour  =Finalizar tutorial
 label.search.for.courses  =Buscar curso
 label.save.as.course.grouping  =Guardar como agrupaci\u00f3n del curso
 label.enter.course.grouping.name  =Ingrese el nombre para la nueva agrupaci\u00f3n del curso
@@ -781,6 +778,19 @@ label.policy.details  =Detalles de la pol\u00edtica
 authoring.fla.page.prop.gradebook.none  =Sin puntuaci\u00f3n
 label.select.country  =Seleccione un pa\u00eds
 error.country.required  =Se require pa\u00eds
+error.cannot.login.as.with.not.allow.direct.access  =No puede ingresar como este usuario porque es un usuario de una integraci\u00f3n y la opcion de 'Permitir acceso directo a LAMS para usuarios de integracion' esta desactivada en la configuraci\u00f3n del sistema.
+signup.email.verify.body.1  =Hola!
+signup.email.verify.body.2  =Por favor, confirme su direcci\u00f3n de correo electr\u00f3nico haciendo clic en el siguiente enlace
+signup.email.verify.body.3  =Saludos,
+signup.email.verify.body.4  =El equipo LAMS
+signup.email.welcome.body.1  =Hola!
+signup.email.welcome.body.2  =Ha registrado con \u00e9xito una cuenta con nombre de usuario {0} en el servidor LAMS en {1}.
+signup.email.welcome.body.3  =Si alguna vez olvida su contrase\u00f1a, puede restablecerla a trav\u00e9s de esta URL
+signup.email.welcome.body.4  =Saludos
+signup.email.welcome.body.5  =El equipo LAMS
+authoring.fla.readonly.checkbox  =solo-lectura
+authoring.fla.readonly.forbidden  =Esta secuencia es de solo lectura. Si desea modificarlo, puede crear una copia.
+register.email.verify  =Se enviar\u00e1 un correo electr\u00f3nico de confirmaci\u00f3n antes de que pueda iniciar sesi\u00f3n por primera vez.
 
 
-#======= End labels: Exported 775 labels for es ES =====
+#======= End labels: Exported 785 labels for es ES =====
