--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Jul 06 23:26:00 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 07:46:51 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -262,20 +262,6 @@ signup.email  =Email
 signup.confirm.email  =Confirm email
 signup.course.key  =Course key
 signup.submit  =Submit
-signup.email.verify.subject =LAMS: confirm email address
-signup.email.verify.body.1 =Hi there,
-signup.email.verify.body.2 =Please confirm your email address by clicking on the link below
-signup.email.verify.body.3 =Regards,
-signup.email.verify.body.4 =LAMS Signup System
-signup.email.verify.sent =A confirmation email has been sent to {0}<br />Check your email and follow the instructions.
-signup.email.verify.success =You email has been verified
-signup.email.verify.fail =Your email could not be verified
-signup.email.welcome.subject =LAMS: account details
-signup.email.welcome.body.1 =Hi there,
-signup.email.welcome.body.2 =You've successfully registered an account with username {0} on the LAMS server at {1}.
-signup.email.welcome.body.3 =If you ever forget your password, you can reset it via this URL
-signup.email.welcome.body.4 =Regards,
-signup.email.welcome.body.5 =LAMS Signup System
 title.lams.signup  =LAMS Signup
 error.username.blank  =Username cannot be blank
 error.username.exists  =Username is taken
@@ -291,7 +277,6 @@ error.login.or.password.incorrect  =Login or password is incorrect. If you have 
 register.if.you.want.to.signup  =If you want to sign up to LAMS as a new user, please select "Sign up" tab. If you already have an account, please select "Login" one.
 register.signup.to.lams  =Sign up
 register.login  =Login
-register.email.verify =A confirmation email will be sent before you are able to log in.
 kaltura.select.upload  =Select Upload tab to upload videos or Webcam to start webcam recording. After you have done with this press Next button. Assign a title to your video and follow the instructions to add your video(s).
 kaltura.error  =Sorry, there was an error
 kaltura.upload.error  =An error occurred processing this video. Please, reupload it.
@@ -487,8 +472,6 @@ authoring.fla.rename.button  =Rename
 authoring.fla.open.button  =Open
 authoring.fla.save.button  =Save
 authoring.fla.import.button  =Import
-authoring.fla.readonly.checkbox =read-only
-authoring.fla.readonly.forbidden =This sequence is read-only. If you want to modify it, you can create its copy.
 authoring.fla.folder  =folder
 authoring.fla.sequence  =sequence
 authoring.fla.sequence.not.valid  =The sequence is not valid.<br />It needs to be corrected before it can be used in lessons.
@@ -795,7 +778,19 @@ label.policy.details  =Policy details
 authoring.fla.page.prop.gradebook.none  =No score
 label.select.country  =Select a country
 error.country.required  =Country is required
-
+error.cannot.login.as.with.not.allow.direct.access  =You cannot login as this user as they are an Integration Learner and 'Allow direct access to main LAMS page for Integration Learners' is turned off in the system configuration.
+signup.email.verify.body.1  =Hi there,
+signup.email.verify.body.2  =Please confirm your email address by clicking on the link below
+signup.email.verify.body.3  =Regards,
+signup.email.verify.body.4  =LAMS Signup System
+signup.email.welcome.body.1  =Hi there,
+signup.email.welcome.body.2  =You''ve successfully registered an account with username {0} on the LAMS server at {1}.
+signup.email.welcome.body.3  =If you ever forget your password, you can reset it via this URL
+signup.email.welcome.body.4  =Regards,
+signup.email.welcome.body.5  =LAMS Signup System
+authoring.fla.readonly.checkbox  =read-only
+authoring.fla.readonly.forbidden  =This sequence is read-only. If you want to modify it, you can create its copy.
+register.email.verify  =A confirmation email will be sent before you are able to log in.
 
 #====== Templates	
 authoring.msg.close.cancel.save=Do you want to close this window without saving?	
@@ -851,4 +846,5 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
-#======= End labels: Exported 775 labels for en AU =====
+
+#======= End labels: Exported 785 labels for en AU =====
