LDEV-4617: missing labels
Also changed email to correo electronico en Español.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 07:46:51 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 08:50:58 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -791,6 +791,7 @@ signup.email.welcome.body.5  =LAMS Signup System
 authoring.fla.readonly.checkbox  =read-only
 authoring.fla.readonly.forbidden  =This sequence is read-only. If you want to modify it, you can create its copy.
 register.email.verify  =A confirmation email will be sent before you are able to log in.
+signup.email.verify.sent  =A confirmation email has been sent to {0}<br />Check your email and follow the instructions.
 
 #====== Templates	
 authoring.msg.close.cancel.save=Do you want to close this window without saving?	
@@ -847,4 +848,4 @@ authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Q
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
 
-#======= End labels: Exported 785 labels for en AU =====
+#======= End labels: Exported 786 labels for en AU =====
