--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 07:46:48 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Aug 12 08:51:01 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -127,7 +127,7 @@ label.day_phone  =Tel\u00e9fono 1
 label.evening_phone  =Tel\u00e9fono 2
 label.mobile_phone  =Tel\u00e9fono movil
 label.fax  =Fax
-label.email  =Email
+label.email  =Correo electr\u00f3nico
 label.language  =Lenguaje
 title.password.change.screen  =Cambiar contrase\u00f1a
 msg.groups.empty  =No hay clases disponibles
@@ -143,8 +143,8 @@ label.workspace.root_folder  =Mi espacio de trabajo
 msg.design.not.saved  =Su dise\u00f1o no ha sido guardado, cualquiera de los cambios efectuados se perder\u00e1n
 error.firstname.required  =Se requiere nombre.
 error.lastname.required  =Se requiere Apellido
-error.email.required  =Se requiere direcci\u00f3n de email.
-error.valid.email.required  =La direcci\u00f3n de email no es v\u00e1lida.
+error.email.required  =Se requiere direcci\u00f3n de correo electr\u00f3nico.
+error.valid.email.required  =La direcci\u00f3n de correo electr\u00f3nico no es v\u00e1lida.
 message.lesson.not.started.cannot.participate  =Esta lecci\u00f3n no ha sido empezada. No puede participar de la misma hasta que esta haya comenzado.
 index.mycourses  =Mis Clases
 title.export.choose.format  =Seleccione el formato para exportar esta secuencia
@@ -179,18 +179,18 @@ title.forgot.password  =LAMS :: Recuperar Contrase\u00f1a
 label.forgot.password.confirm  =Recuperar Contrase\u00f1a
 forgot.password.email.subject  =LAMS - Cambio de Contrase\u00f1a
 forgot.password.email.body  =Copie el enlace a su navegador de internet para poder cambiar su contrase\u00f1a.
-forgot.password.email.sent  =Se ha enviado un mensaje de correo a su email.
-error.user.not.found  =No se han encontrado su usuario en este servidor LAMS. Verifique su nombre de usuario y email.
+forgot.password.email.sent  =Se ha enviado un mensaje a su correo electr\u00f3nico.
+error.user.not.found  =No se han encontrado su usuario en este servidor LAMS. Verifique su nombre de usuario y correo electr\u00f3nico.
 error.support.email.not.set  =No se ha podido enviar el correo electr\u00f3nico ya que el servidor no ha sido configurado para enviar mensajes de correo. Contacte a su administrador de sistema.
 error.password.request.expired  =El enlace para cambiar su contrase\u00f1a ha expirado. Por favor vuelva a solicitar su contrase\u00f1a nuevamente.
-label.forgot.password.instructions.1  =Por favor ingrese su nombre de usuario O su email. Un correo le ser\u00e1 enviado brevemente con un enlace para que cambie su contrase\u00f1a. Solo necesita uno de los siguientes datos.
-label.forgot.password.instructions.2  =Si usted no tiene email, comuniquese con el administrador de sistema.
-label.forgot.password.email  =Ingrese email
+label.forgot.password.instructions.1  =Por favor ingrese su nombre de usuario O su correo electr\u00f3nico. Un correo le ser\u00e1 enviado brevemente con un enlace para que cambie su contrase\u00f1a. Solo necesita uno de los siguientes datos.
+label.forgot.password.instructions.2  =Si usted no tiene correo electr\u00f3nico, comuniquese con el administrador de sistema.
+label.forgot.password.email  =Ingrese correo electr\u00f3nico
 label.forgot.password.username  =Ingrese nombre de usuario
 error.forgot.password.fields  =Se requiren los dos campos. Intente nuevamente.
 error.email.not.sent  =El servidor no ha podido enviar el mensaje. Por favor comuniquese con el administrador de sistema.
-error.email.not.found  =No se ha encontrado un usuario que tenga el email mencionado. Verifique su email e intente nuevamente.
-error.forgot.password.email  =Ingrese email
+error.email.not.found  =No se ha encontrado un usuario que tenga el correo electr\u00f3nico mencionado. Verifique su correo electr\u00f3nico e intente nuevamente.
+error.forgot.password.email  =Ingrese correo electr\u00f3nico
 error.forgot.password.username  =Ingrese nombre de usuario
 button.select.another.importfile  =Seleccione otro archivo a importar
 error.forgot.password.incorrect.key  =La clave es incorrecta o ya ha sido utilizada. Vuelva a la p\u00e1gina inicial y solicite nuevamente que se le envie una nueva contrase\u00f1a.
@@ -216,7 +216,7 @@ email.compose.mail  =Escribir correo
 index.coursegradebook.subgroup  =Calificaciones
 error.finish.date.passed  =El tiempo asignado para esta lecci\u00f3n ha expirado. Si necesita ayuda contactacte al instructor.
 index.emailnotifications  =Notificaciones
-index.emailnotifications.tooltip  =Notificaciones por email
+index.emailnotifications.tooltip  =Notificaciones por correo electr\u00f3nico
 label.portrait.please.wait  =Por favor espere
 label.portrait.take.snapshot.from.webcamera  =Tomar instant\u00e1nea con Webcam
 label.portrait.configure  =Configurar
@@ -226,7 +226,7 @@ label.portrait.yes.set.it.as.portrait  =Generar como retrato
 label.portrait.no.take.another.one  =Tomar otra
 error.edit.disabled  =Desactivar opci\u00f3n para editar el perfil de usuario.
 message.profile.partially.edited  =Los datos de perfil de usuario se pueden editar solo parcialmente por restricciones de edici\u00f3n.
-message.partial.edit.only  =Solamente email y tel\u00e9fonos pueden ser cambiados dado restricciones en edici\u00f3n de perfil de usuario.
+message.partial.edit.only  =Solamente correo electr\u00f3nico y tel\u00e9fonos pueden ser cambiados dado restricciones en edici\u00f3n de perfil de usuario.
 error.password.empty  =Se requiere nueva contrase\u00f1a.
 label.portrait.create.new.portrait  =Seleccione una imagen o use la c\u00e1mara de su ordenador para crear su foto.
 message.preceding.lessons.not.finished.cannot.participate  =Lecciones anteriores no se han terminado. Usted no puede participar en la lecci\u00f3n hasta que se haya finalizado las anteriores.
@@ -258,8 +258,8 @@ signup.password  =Contrase\u00f1a
 signup.confirm.password  =Confirmar contrase\u00f1a
 signup.first.name  =Nombre
 signup.last.name  =Apellido
-signup.email  =Email
-signup.confirm.email  =Confirmar email
+signup.email  =Correo electr\u00f3nico
+signup.confirm.email  =Confirmar correo electr\u00f3nico
 signup.course.key  =Clave del curso
 signup.submit  =Enviar
 title.lams.signup  =Registraci\u00f3n
@@ -269,8 +269,8 @@ error.first.name.blank  =Se require nombre.
 error.last.name.blank  =Se require apellido.
 error.password.blank  =Se require contrase\u00f1a.
 error.passwords.unequal  =Las contrase\u00f1as no coinciden
-error.email.blank  =Se require email.
-error.emails.unequal  =Las direcciones de email no son las mismas
+error.email.blank  =Se require correo electr\u00f3nico.
+error.emails.unequal  =Las direcciones de correo electr\u00f3nico no son las mismas
 error.email.invalid.format  =Formato de correo electr\u00f3nico no es v\u00e1lido
 error.course.key.invalid  =La clave del curso es incorrecta. Por favor int\u00e9ntelo de nuevo o contacte con su administrador del curso para la clave correcta
 error.login.or.password.incorrect  =Usuario o contrase\u00f1a son incorrectos. Si usted no se ha registrado previamente, por favor reg\u00edstrese {0}aqu\u00ed{1}.
@@ -791,6 +791,7 @@ signup.email.welcome.body.5  =El equipo LAMS
 authoring.fla.readonly.checkbox  =solo-lectura
 authoring.fla.readonly.forbidden  =Esta secuencia es de solo lectura. Si desea modificarlo, puede crear una copia.
 register.email.verify  =Se enviar\u00e1 un correo electr\u00f3nico de confirmaci\u00f3n antes de que pueda iniciar sesi\u00f3n por primera vez.
+signup.email.verify.sent  =Se envi\u00f3 un correo electr\u00f3nico de confirmaci\u00f3n a {0}.</br>Verifique su correo electr\u00f3nico y siga las instrucciones.
 
 
-#======= End labels: Exported 785 labels for es ES =====
+#======= End labels: Exported 786 labels for es ES =====
